--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,28 @@
 # Project exclude paths
 /out/
+/.idea/
+
+
+# Compiled class file
+*.class
+
+# Log file
+*.log
+
+# BlueJ files
+*.ctxt
+
+# Mobile Tools for Java (J2ME)
+.mtj.tmp/
+
+# Package Files #
+*.jar
+*.war
+*.nar
+*.ear
+*.zip
+*.tar.gz
+*.rar
+
+# Other
+*.iml
